@@ -1,18 +1,20 @@
 package com.poupa.vinylmusicplayer.ui.activities.tageditor;
 
-import android.annotation.TargetApi;
 import android.app.Activity;
 import android.app.Dialog;
+import android.app.PendingIntent;
 import android.app.SearchManager;
+import android.content.ActivityNotFoundException;
+import android.content.ContentUris;
 import android.content.Context;
 import android.content.Intent;
 import android.graphics.Bitmap;
-import android.graphics.BitmapFactory;
 import android.media.MediaScannerConnection;
 import android.net.Uri;
 import android.os.Build;
+import android.os.Build.VERSION_CODES;
 import android.os.Bundle;
-import android.util.Log;
+import android.provider.MediaStore;
 import android.view.MenuItem;
 import android.view.View;
 import android.view.animation.OvershootInterpolator;
@@ -20,6 +22,9 @@ import android.widget.ImageView;
 import android.widget.LinearLayout;
 import android.widget.Toast;
 
+import androidx.activity.result.ActivityResultLauncher;
+import androidx.activity.result.IntentSenderRequest;
+import androidx.activity.result.contract.ActivityResultContracts;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 import androidx.appcompat.widget.Toolbar;
@@ -37,26 +42,26 @@ import com.poupa.vinylmusicplayer.discog.tagging.MultiValuesTagUtil;
 import com.poupa.vinylmusicplayer.misc.DialogAsyncTask;
 import com.poupa.vinylmusicplayer.misc.SimpleObservableScrollViewCallbacks;
 import com.poupa.vinylmusicplayer.misc.UpdateToastMediaScannerCompletionListener;
+import com.poupa.vinylmusicplayer.model.Song;
 import com.poupa.vinylmusicplayer.ui.activities.base.AbsBaseActivity;
 import com.poupa.vinylmusicplayer.ui.activities.saf.SAFGuideActivity;
-import com.poupa.vinylmusicplayer.util.MusicUtil;
+import com.poupa.vinylmusicplayer.util.AutoDeleteAudioFile;
+import com.poupa.vinylmusicplayer.util.AutoDeleteTempFile;
+import com.poupa.vinylmusicplayer.util.OopsHandler;
 import com.poupa.vinylmusicplayer.util.SAFUtil;
 import com.poupa.vinylmusicplayer.util.Util;
 
 import org.jaudiotagger.audio.AudioFile;
-import org.jaudiotagger.audio.AudioFileIO;
 import org.jaudiotagger.tag.FieldKey;
 import org.jaudiotagger.tag.Tag;
 import org.jaudiotagger.tag.images.Artwork;
 import org.jaudiotagger.tag.images.ArtworkFactory;
 
-import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.lang.ref.WeakReference;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -67,8 +72,6 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
 
     public static final String EXTRA_ID = "extra_id";
     public static final String EXTRA_PALETTE = "extra_palette";
-    private static final String TAG = AbsTagEditorActivity.class.getSimpleName();
-    private static final int REQUEST_CODE_SELECT_IMAGE = 1000;
 
     FloatingActionButton fab;
     ObservableScrollView observableScrollView;
@@ -94,37 +97,116 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
             image.setTranslationY(scrollY / 2.0f);
         }
     };
-    private List<String> songPaths;
-
-    private List<String> savedSongPaths;
-    private String currentSongPath;
+    private List<Song> songs;
+    private List<Song> savedSongs;
+    private Song currentSong;
     private Map<FieldKey, String> savedTags;
     private ArtworkInfo savedArtworkInfo;
+
+    private ActivityResultLauncher<String> writeTagsKitkat_SAFFilePicker;
+    private ActivityResultLauncher<Intent> writeTagsLollipop_SAFGuide;
+
+    private ActivityResultLauncher<Uri> writeTagsLollipop_SAFTreePicker;
+    private ActivityResultLauncher<String> imagePicker;
+
+    private ActivityResultLauncher<IntentSenderRequest> tagEditRequestAndroidR;
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
+
         setContentView(getViewBinding().getRoot());
 
         getIntentExtras();
 
-        songPaths = getSongPaths();
-        if (songPaths.isEmpty()) {
+        songs = getSongs();
+        if (songs.isEmpty()) {
             finish();
             return;
         }
 
         headerVariableSpace = getResources().getDimensionPixelSize(R.dimen.tagEditorHeaderVariableSpace);
 
-        setUpViews();
-
         setSupportActionBar(toolbar);
         //noinspection ConstantConditions
         getSupportActionBar().setTitle(null);
         getSupportActionBar().setDisplayHomeAsUpEnabled(true);
+
+        writeTagsKitkat_SAFFilePicker = registerForActivityResult(
+                new ActivityResultContracts.CreateDocument("audio/*") {
+                    @NonNull
+                    @Override
+                    public Intent createIntent(@NonNull Context context, @NonNull String input) {
+                        return super.createIntent(context, input)
+                                .addCategory(Intent.CATEGORY_OPENABLE)
+                                .putExtra("android.content.extra.SHOW_ADVANCED", true);
+                    }
+                },
+                resultUri -> writeTags(List.of(currentSong), true));
+
+        writeTagsLollipop_SAFGuide = registerForActivityResult(
+                new ActivityResultContracts.StartActivityForResult(),
+                result -> {
+                    if (result.getResultCode() == Activity.RESULT_OK)
+                    {
+                        writeTagsLollipop_SAFTreePicker.launch(null);
+                    }
+                });
+
+        writeTagsLollipop_SAFTreePicker = registerForActivityResult(
+                new ActivityResultContracts.OpenDocumentTree() {
+                    @NonNull
+                    @Override
+                    public Intent createIntent(@NonNull Context context, Uri input) {
+                        return super.createIntent(context, input)
+                                .putExtra("android.content.extra.SHOW_ADVANCED", true);
+                    }
+                },
+                resultUri -> {
+                    SAFUtil.saveTreeUri(this, resultUri);
+                    writeTags(savedSongs, false);
+                });
+
+        if (Build.VERSION.SDK_INT >= VERSION_CODES.R) {
+            tagEditRequestAndroidR = registerForActivityResult(
+                    new ActivityResultContracts.StartIntentSenderForResult(),
+                    result -> {
+                        if (result.getResultCode() == Activity.RESULT_OK) {
+                            setUpViews();
+                        } else {
+                            showFab();
+                            Toast.makeText(this, getString(R.string.access_not_granted), Toast.LENGTH_SHORT).show();
+                        }
+                    });
+        }
+
+        imagePicker = registerForActivityResult(
+                new ActivityResultContracts.GetContent() {
+                    @NonNull
+                    @Override
+                    public Intent createIntent(@NonNull Context context, @NonNull String input) {
+                        return super.createIntent(context, input)
+                                .setType("image/*");
+                    }
+                },
+                this::loadImageFromFile);
+
+        // TODO Refactor to reuse this version-adaptation code for read/write/delete operations
+        if (Build.VERSION.SDK_INT <= Build.VERSION_CODES.Q) {
+            setUpViews();
+        }
+        else {
+            List<Uri> urisToRead = new ArrayList<>();
+            for (Song song : songs) {
+                urisToRead.add(ContentUris.withAppendedId(MediaStore.Audio.Media.getContentUri("external"), song.id));
+            }
+            PendingIntent readPendingIntent = MediaStore.createWriteRequest(this.getContentResolver(), urisToRead);
+
+            tagEditRequestAndroidR.launch(new IntentSenderRequest.Builder(readPendingIntent).build());
+        }
     }
 
-    private void setUpViews() {
+    protected void setUpViews() {
         setUpScrollView();
         setUpFab();
         setUpImageView();
@@ -151,7 +233,7 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
                             getImageFromLastFM();
                             break;
                         case 1:
-                            startImagePicker();
+                            imagePicker.launch(getResources().getString(R.string.pick_from_local_storage));
                             break;
                         case 2:
                             searchImageOnWeb();
@@ -161,12 +243,6 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
                             break;
                     }
                 }).show());
-    }
-
-    private void startImagePicker() {
-        Intent intent = new Intent(Intent.ACTION_GET_CONTENT);
-        intent.setType("image/*");
-        startActivityForResult(Intent.createChooser(intent, getString(R.string.pick_from_local_storage)), REQUEST_CODE_SELECT_IMAGE);
     }
 
     protected abstract void loadCurrentImage();
@@ -199,9 +275,9 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
     protected abstract ViewBinding getViewBinding();
 
     @NonNull
-    protected abstract List<String> getSongPaths();
+    protected abstract List<Song> getSongs();
 
-    void searchWebFor(String... keys) {
+    void searchWebFor(@NonNull String... keys) {
         StringBuilder stringBuilder = new StringBuilder();
         for (String key : keys) {
             stringBuilder.append(key);
@@ -211,16 +287,15 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
         intent.putExtra(SearchManager.QUERY, stringBuilder.toString());
         intent.addFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
 
-        // Start search intent if possible: https://stackoverflow.com/questions/36592450/unexpected-intent-with-action-web-search
-        if (Intent.ACTION_WEB_SEARCH.equals(intent.getAction()) && intent.getExtras() != null) {
-            String query = intent.getExtras().getString(SearchManager.QUERY, null);
-            Intent browserIntent = new Intent(Intent.ACTION_VIEW, Uri.parse("https://www.google.com/search?q="+Uri.encode(query)));
-            boolean browserExists = intent.resolveActivityInfo(getPackageManager(), 0) != null;
-            if (browserExists && query != null) {
-                startActivity(browserIntent);
-                return;
-            }
-        }
+        String query = intent.getExtras().getString(SearchManager.QUERY, null);
+        Intent browserIntent = new Intent(
+                Intent.ACTION_VIEW,
+                Uri.parse("https://www.google.com/search?q="+Uri.encode(query))
+        );
+        try {
+            startActivity(browserIntent);
+            return;
+        } catch (ActivityNotFoundException ignored) {}
 
         Toast.makeText(this, R.string.error_no_app_for_intent, Toast.LENGTH_LONG).show();
     }
@@ -293,41 +368,47 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
 
         hideFab();
 
-        savedSongPaths = getSongPaths();
+        savedSongs = getSongs();
         savedTags = fieldKeyValueMap;
         savedArtworkInfo = artworkInfo;
 
-        if (!SAFUtil.isSAFRequired(savedSongPaths)) {
-            writeTags(savedSongPaths);
-        } else {
-            if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.LOLLIPOP) {
-                if (SAFUtil.isSDCardAccessGranted(this)) {
-                    writeTags(savedSongPaths);
-                } else {
-                    startActivityForResult(new Intent(this, SAFGuideActivity.class), SAFGuideActivity.REQUEST_CODE_SAF_GUIDE);
-                }
+        if (Build.VERSION.SDK_INT < Build.VERSION_CODES.LOLLIPOP) {
+            if (!SAFUtil.isSAFRequired(savedSongs)) {
+                writeTags(savedSongs, false);
             } else {
                 writeTagsKitkat();
+            }
+        } else if (Build.VERSION.SDK_INT < VERSION_CODES.R) {
+            if (!SAFUtil.isSAFRequired(savedSongs)) {
+                writeTags(savedSongs, false);
+            } else if (SAFUtil.isSDCardAccessGranted(this)) {
+                writeTags(savedSongs, false);
+            } else {
+                writeTagsLollipop_SAFGuide.launch(new Intent(this, SAFGuideActivity.class));
+            }
+        } else {
+            if (SAFUtil.isSDCardAccessGranted(this)) {
+                writeTags(savedSongs, false);
             }
         }
     }
 
-    private void writeTags(List<String> paths) {
-        new WriteTagsAsyncTask(this).execute(new WriteTagsAsyncTask.LoadingInfo(paths, savedTags, savedArtworkInfo));
+    private void writeTags(List<Song> songs, boolean kitkatPickFile) {
+        new WriteTagsAsyncTask(this).execute(new WriteTagsAsyncTask.LoadingInfo(songs, savedTags, savedArtworkInfo, kitkatPickFile));
     }
 
-    @TargetApi(Build.VERSION_CODES.KITKAT)
     private void writeTagsKitkat() {
-        if (savedSongPaths.size() < 1) return;
+        if (savedSongs.size() < 1) return;
 
-        currentSongPath = savedSongPaths.remove(0);
+        currentSong = savedSongs.remove(0);
 
-        if (!SAFUtil.isSAFRequired(currentSongPath)) {
-            writeTags(Collections.singletonList(currentSongPath));
+        if (!SAFUtil.isSAFRequired(currentSong.data)) {
+            writeTags(List.of(currentSong), false);
             writeTagsKitkat();
         } else {
-            Toast.makeText(this, String.format(getString(R.string.saf_pick_file), currentSongPath), Toast.LENGTH_LONG).show();
-            SAFUtil.openFilePicker(this);
+            final String message = getString(R.string.saf_pick_file, currentSong.data);
+            Toast.makeText(this, message, Toast.LENGTH_LONG).show();
+            writeTagsKitkat_SAFFilePicker.launch(message);
         }
     }
 
@@ -345,34 +426,20 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
                 final LoadingInfo info = params[0];
 
                 Artwork artwork = null;
-                File albumArtFile = null;
-                final String albumArtMimeType = "image/png";
                 if (info.artworkInfo != null && info.artworkInfo.artwork != null) {
-                    try {
-                        albumArtFile = MusicUtil.createAlbumArtFile().getCanonicalFile();
-                        info.artworkInfo.artwork.compress(Bitmap.CompressFormat.PNG, 0, new FileOutputStream(albumArtFile));
-                        artwork = ArtworkFactory.createArtworkFromFile(albumArtFile);
+                    try (AutoDeleteTempFile albumArtFile = AutoDeleteTempFile.create(null, "png")){
+                        info.artworkInfo.artwork.compress(Bitmap.CompressFormat.PNG, 0, new FileOutputStream(albumArtFile.get().getCanonicalFile()));
+                        artwork = ArtworkFactory.createArtworkFromFile(albumArtFile.get());
                     } catch (IOException e) {
-                        e.printStackTrace();
+                        OopsHandler.copyStackTraceToClipboard(activity.get(), e);
                     }
                 }
 
                 int counter = 0;
-                boolean wroteArtwork = false;
-                boolean deletedArtwork = false;
-                for (String filePath : info.filePaths) {
-                    publishProgress(++counter, info.filePaths.size());
-                    try {
-                        Uri safUri = null;
-
-                        if (filePath.contains(SAFUtil.SEPARATOR)) {
-                            String[] fragments = filePath.split(SAFUtil.SEPARATOR);
-                            filePath = fragments[0];
-                            safUri = Uri.parse(fragments[1]);
-                        }
-
-                        final AudioFile audioFile = AudioFileIO.read(new File(filePath));
-                        final Tag tag = audioFile.getTagOrCreateAndSetDefault();
+                for (Song song : info.songs) {
+                    publishProgress(++counter, info.songs.size());
+                    try (AutoDeleteAudioFile audioFile = SAFUtil.loadAudioFile(activity.get(), song)) {
+                        final Tag tag = audioFile.get().getTagOrCreateAndSetDefault();
 
                         if (info.fieldKeyValueMap != null) {
                             for (final Map.Entry<FieldKey, String> entry : info.fieldKeyValueMap.entrySet()) {
@@ -391,7 +458,7 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
                                         tag.setField(entry.getKey(), entry.getValue().trim());
                                     }
                                 } catch (Exception e) {
-                                    e.printStackTrace();
+                                    OopsHandler.copyStackTraceToClipboard(activity.get(), e);
                                 }
                             }
                         }
@@ -399,48 +466,26 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
                         if (info.artworkInfo != null) {
                             if (info.artworkInfo.artwork == null) {
                                 tag.deleteArtworkField();
-                                deletedArtwork = true;
                             } else if (artwork != null) {
                                 tag.deleteArtworkField();
                                 tag.setField(artwork);
-                                wroteArtwork = true;
                             }
                         }
 
-                        SAFUtil.write(activity.get(), audioFile, safUri);
+                        SAFUtil.write(activity.get(), audioFile, song);
                     } catch (@NonNull Exception | NoSuchMethodError | VerifyError e) {
-                        e.printStackTrace();
+                        OopsHandler.copyStackTraceToClipboard(activity.get(), e);
                     }
                 }
 
-                final Context context = getContext();
-                if (context != null) {
-                    if (wroteArtwork) {
-                        MusicUtil.insertAlbumArt(
-                                context,
-                                info.artworkInfo.albumId,
-                                albumArtFile.getPath(),
-                                albumArtMimeType);
-                    } else if (deletedArtwork) {
-                        MusicUtil.deleteAlbumArt(context, info.artworkInfo.albumId);
-                    }
-                }
-
-                Collection<String> paths = info.filePaths;
-
-                if (Build.VERSION.SDK_INT == Build.VERSION_CODES.KITKAT) { // remove SAF URI from paths
-                    paths = new ArrayList<>(info.filePaths.size());
-                    for (String path : info.filePaths) {
-                        if (path.contains(SAFUtil.SEPARATOR)) {
-                            path = path.split(SAFUtil.SEPARATOR)[0];
-                        }
-                        paths.add(path);
-                    }
+                Collection<String> paths = new ArrayList<>();
+                for (Song song : info.songs) {
+                    paths.add(song.data);
                 }
 
                 return paths.toArray(new String[0]);
             } catch (Exception e) {
-                e.printStackTrace();
+                OopsHandler.copyStackTraceToClipboard(activity.get(), e);
                 return null;
             }
         }
@@ -486,16 +531,19 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
         }
 
         static class LoadingInfo {
-            final Collection<String> filePaths;
+            final Collection<Song> songs;
             @Nullable
             final Map<FieldKey, String> fieldKeyValueMap;
             @Nullable
             private final ArtworkInfo artworkInfo;
 
-            private LoadingInfo(Collection<String> filePaths, @Nullable Map<FieldKey, String> fieldKeyValueMap, @Nullable ArtworkInfo artworkInfo) {
-                this.filePaths = filePaths;
+            final boolean kitkatPickFile;
+
+            private LoadingInfo(Collection<Song> songs, @Nullable Map<FieldKey, String> fieldKeyValueMap, @Nullable ArtworkInfo artworkInfo, boolean kitkatPickFile) {
+                this.songs = songs;
                 this.fieldKeyValueMap = fieldKeyValueMap;
                 this.artworkInfo = artworkInfo;
+                this.kitkatPickFile = kitkatPickFile;
             }
         }
     }
@@ -514,72 +562,39 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
         return id;
     }
 
-    @Override
-    protected void onActivityResult(int requestCode, int resultCode, @Nullable Intent intent) {
-        super.onActivityResult(requestCode, resultCode, intent);
-        if (intent == null) {return;}
-
-        switch (requestCode) {
-            case REQUEST_CODE_SELECT_IMAGE:
-                if (resultCode == RESULT_OK) {
-                    Uri selectedImage = intent.getData();
-                    loadImageFromFile(selectedImage);
-                }
-                break;
-
-            case SAFGuideActivity.REQUEST_CODE_SAF_GUIDE:
-                SAFUtil.openTreePicker(this);
-                break;
-
-            case SAFUtil.REQUEST_SAF_PICK_TREE:
-                if (resultCode == RESULT_OK) {
-                    SAFUtil.saveTreeUri(this, intent);
-                    writeTags(savedSongPaths);
-                }
-                break;
-
-            case SAFUtil.REQUEST_SAF_PICK_FILE:
-                if (resultCode == RESULT_OK) {
-                    writeTags(Collections.singletonList(currentSongPath + SAFUtil.SEPARATOR + intent.getDataString()));
-                }
-                break;
-        }
-    }
-
     protected abstract void loadImageFromFile(Uri selectedFile);
 
-    @NonNull
-    private AudioFile getAudioFile(@NonNull String path) {
+    @Nullable AutoDeleteAudioFile getAudioFile() {
+        return getAudioFile(songs.get(0));
+    }
+
+    @Nullable
+    private AutoDeleteAudioFile getAudioFile(@NonNull Song song) {
+        return SAFUtil.loadAudioFile(this, song);
+    }
+
+    @Nullable
+    static String getSongTitle(@NonNull final AudioFile audio) {
         try {
-            return AudioFileIO.read(new File(path));
-        } catch (@NonNull Exception | NoSuchMethodError | VerifyError e) {
-            Log.e(TAG, "Could not read audio file " + path, e);
-            return new AudioFile();
+            return audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.TITLE);
+        } catch (Exception e) {
+            return null;
         }
     }
 
     @Nullable
-    String getSongTitle() {
+    static String getAlbumTitle(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.TITLE);
+            return audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.ALBUM);
         } catch (Exception ignored) {
             return null;
         }
     }
 
     @Nullable
-    String getAlbumTitle() {
+    static String getArtistName(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.ALBUM);
-        } catch (Exception ignored) {
-            return null;
-        }
-    }
-
-    @Nullable
-    String getArtistName() {
-        try {
-            List<String> tags = getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getAll(FieldKey.ARTIST);
+            List<String> tags = audio.getTagOrCreateAndSetDefault().getAll(FieldKey.ARTIST);
             return MultiValuesTagUtil.tagEditorMerge(tags);
         } catch (Exception ignored) {
             return null;
@@ -587,9 +602,9 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
     }
 
     @Nullable
-    String getAlbumArtistName() {
+    static String getAlbumArtistName(@NonNull final AudioFile audio) {
         try {
-            List<String> tags = getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getAll(FieldKey.ALBUM_ARTIST);
+            List<String> tags = audio.getTagOrCreateAndSetDefault().getAll(FieldKey.ALBUM_ARTIST);
             return MultiValuesTagUtil.tagEditorMerge(tags);
         } catch (Exception ignored) {
             return null;
@@ -597,59 +612,45 @@ public abstract class AbsTagEditorActivity extends AbsBaseActivity {
     }
 
     @Nullable
-    String getGenreName() {
+    static String getGenreName(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.GENRE);
+            return audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.GENRE);
         } catch (Exception ignored) {
             return null;
         }
     }
 
     @Nullable
-    String getSongYear() {
+    static String getSongYear(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.YEAR);
+            return audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.YEAR);
         } catch (Exception ignored) {
             return null;
         }
     }
 
     @Nullable
-    String getDiscNumber() {
+    static String getDiscNumber(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.DISC_NO);
+            return audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.DISC_NO);
         } catch (Exception ignored) {
             return null;
         }
     }
 
     @Nullable
-    String getTrackNumber() {
+    static String getTrackNumber(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.TRACK);
+            return audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.TRACK);
         } catch (Exception ignored) {
             return null;
         }
     }
 
     @Nullable
-    String getLyrics() {
+    static String getLyrics(@NonNull final AudioFile audio) {
         try {
-            return getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirst(FieldKey.LYRICS);
-        } catch (Exception ignored) {
-            return null;
-        }
-    }
-
-    @Nullable
-    Bitmap getAlbumArt() {
-        try {
-            final Artwork artworkTag = getAudioFile(songPaths.get(0)).getTagOrCreateAndSetDefault().getFirstArtwork();
-            if (artworkTag != null) {
-                final byte[] artworkBinaryData = artworkTag.getBinaryData();
-                return BitmapFactory.decodeByteArray(artworkBinaryData, 0, artworkBinaryData.length);
-            }
-            return null;
+            return audio.getTagOrCreateAndSetDefault().getFirst(FieldKey.LYRICS);
         } catch (Exception ignored) {
             return null;
         }
